/*
 * $Id$
 */

2010-03-30 06:51 UTC-0600 Teo Fonrouge (teo/at/windtelsoft/dot/com)
  *  samples/choice/choice.prg
     % enhanced sample to show usage of hash types

  *  src/common/wxhfuncs.prg
     ! Fixed checking for a differ valtype on old/new values

2010-03-30 06:32 UTC-0600 Teo Fonrouge (teo/at/windtelsoft/dot/com)
  *  samples/choice/choice.prg
     % showing capability to use either of numeric value or string value to
       use on CHOICE ctrls

2010-03-30 06:30 UTC-0600 Teo Fonrouge (teo/at/windtelsoft/dot/com)
  *  samples/choice/choice.prg
     % enhanced sample to show final values of CHOICE ctrls

2010-03-30 06:19 UTC-0600 Teo Fonrouge (teo/at/windtelsoft/dot/com)
  *  include/wxHarbour/wxharbour.ch
     * on @ PUSHVALIDATOR now is requiered to give a explicit code block for the
       warning block to evaluate ( as almost all else controls )

  *  src/common/wxhfuncs.prg
     % using picture clause on wxTextCtrl's when showing value, when editing the
       buffer is replaced with the raw value
     ! Fixed double evaluation for warning block when TAB key is used to change
       focus to next control
     * using the current value in ::Block to give as parameter on the warning
       block
     * ::TextValue now requieres the 'pictured' parameter to return the value

2010-03-28 23:17 UTC-0600 Teo Fonrouge (teo/at/windtelsoft/dot/com)
  *  src/raddox/TField.prg
     % raise error if default value is given and is not in a valid values list
     * in ::Reset, check first for ::FDefaultValue

2010-03-26 10:27 UTC-0600 Teo Fonrouge (teo/at/windtelsoft/dot/com)
  *  src/common/wxhfuncs.prg
     * renamed dummy function wxh_dummy to WXH_SYMBOL_UNUSED

  *  src/wxbase/manwindows/wxhDialog.prg
     * removed unneeded method

2010-03-26 08:50 UTC-0600 Teo Fonrouge (teo/at/windtelsoft/dot/com)
  *  src/wxbase/baseclasses/wx_Window.cpp
     * added protection against invalid parameter on ::SetValidator

  *  src/wxbase/sizers/wx_Sizer.cpp